--- a/LovePvP/Views/Shared/_Layout.cshtml
+++ b/LovePvP/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                                 Leaderboards
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="leaderboardsDropdown">
-                                <li><a class="dropdown-item" href="@Url.Action("SoloShuffle", "Leaderboards")">Solo Shuffle</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("SoloShuffleAll", "Leaderboards")">Solo Shuffle</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("RatedBgBlitz", "Leaderboards")">Rated Battleground Blitz</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("RatedBg", "Leaderboards")">Rated Battlegrounds</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("TwoVsTwo", "Leaderboards")">2v2 Arena</a></li>
