--- a/LovePvP/Views/Leaderboards/TwoVsTwo.cshtml
+++ b/LovePvP/Views/Leaderboards/TwoVsTwo.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<LeaderboardEntry>
+﻿@* @model List<LeaderboardEntry>
 
 <h1>2v2 Arena Leaderboard</h1>
 
@@ -57,3 +57,4 @@ else
         <a href="?page=@(ViewBag.CurrentPage + 1)" class="btn btn-primary">Next</a>
     }
 </div>
+ *@
